--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 		<legend>Example 1</legend>
 	
 		<p>Type the title and watch the slug update automatically.</p>
-	 
+	         
+		<pre>$('#slug').slugify('#title');</pre>	
+	
 		<div>
 			<label for="title">Title</label>
 			<input type="text" name="title" value="" id="title" size="40">
@@ -47,6 +49,12 @@
 		<legend>Example 2</legend>
 	
 		<p>This one uses a custom <code>slugFunc</code> function that makes the slug uppercase.</p>
+		
+<pre>
+$('#slug2').slugify('#title2', {
+	slugFunc: (function(val, originalFunc) { return (originalFunc(val).toUpperCase()); } )
+});
+</pre>		
 	 
 		<div>
 			<label for="title2">Title</label>
@@ -64,7 +72,9 @@
 		<legend>Example 3</legend>
 	
 		<p>It can also update the text() of an HTML element.</p>
-	 
+		
+		<pre>$('#example_3 .slug').slugify('#title3');</pre>
+		
 		<div>
 			<label for="title3">Title</label>
 			<input type="text" name="title3" value="" id="title3" size="40">
