--- a/index.html
+++ b/index.html
@@ -10,85 +10,50 @@
 	
 	<script type="text/javascript" charset="utf-8">
 		$().ready(function () {
-			$('#slug').slugify('#title');
+			$('.slug').slugify('#title');
 			
-			$('#slug2').slugify('#title2', {
+			$('#caps_slug').slugify('#title', {
 					slugFunc: (function(val, originalFunc) { return (originalFunc(val).toUpperCase()); } )
 				}
 			);
 			
-			$('#example_3 .slug').slugify('#title3');
 		});
 		
 	</script>
 </head>
 <body>
 	
-	
 <form>
-	<fieldset id="example_1">
-		<legend>Example 1</legend>
+
+
 	
-		<p>Type the title and watch the slug update automatically.</p>
-	         
-		<pre>$('#slug').slugify('#title');</pre>	
-	
-		<div>
-			<label for="title">Title</label>
-			<input type="text" name="title" value="" id="title" size="40">
-		</div>
-	
-		<div>
-			<label for="slug" >Slug</label>
-			<input type="text" name="slug" value="" id="slug" size="40">
-		</div>
-		
-	</fieldset>
-	
-	<fieldset id="example_2">
-		<legend>Example 2</legend>
-	
-		<p>This one uses a custom <code>slugFunc</code> function that makes the slug uppercase.</p>
-		
+<h2>As you type the title of a page...</h2>
+
+<label for="title">Title</label>
+<input type="text" name="title" value="" id="title" size="40">
+
+<h2>the slug is created automatically.</h2>
+
+<label for="slug" >http://geocities.com/awesometown/</label><input type="text" name="slug" value="" class="slug" size="40">
+                                        
+<p>Your URL is http://geocities.com/dhtml/<span class="slug"></span>.</p>
+
+<h2>Could it be any simpler than this?</h2>
+
+<pre>$('.slug').slugify('#title');</pre>
+
+
+<h2>Don't like default slug format? Pass in your own slugFunc.</h2>
 <pre>
-$('#slug2').slugify('#title2', {
+$('#caps_slug').slugify('#title', {
 	slugFunc: (function(val, originalFunc) { return (originalFunc(val).toUpperCase()); } )
 });
 </pre>		
-	 
-		<div>
-			<label for="title2">Title</label>
-			<input type="text" name="title2" value="" id="title2" size="40">
-		</div>
-	
-		<div>
-			<label for="slug2" >Slug</label>
-			<input type="text" name="slug2" value="" id="slug2" size="40">
-		</div>
+
+<label for="slug2">http://geocities.com/caplockers/</label><input type="text" name="slug2" value="" id="caps_slug" size="40">	 
+
+
 		
-	</fieldset>
-	
-	 <fieldset id="example_3">
-		<legend>Example 3</legend>
-	
-		<p>It can also update the text() of an HTML element.</p>
-		
-		<pre>$('#example_3 .slug').slugify('#title3');</pre>
-		
-		<div>
-			<label for="title3">Title</label>
-			<input type="text" name="title3" value="" id="title3" size="40">
-		</div>
-		
-		<div>
-			<label for="slug3">Slug</label>
-			<input type="text" name="slug3" value="" id="slug3" size="40" class="slug">	
-		</div>
-		
-		
-		<p>The slug is <code class="slug"></code>.</p>
-		
-	</fieldset>
 
 </form>
 
