--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<!DOCTYPE HTML	>
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -51,7 +51,7 @@
 	
 	<body>                         
 		
-	 <a href="http://github.com/pmcelhaney/jQuery-Slugify-Plugin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+	 <div><a href="http://github.com/pmcelhaney/jQuery-Slugify-Plugin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a></div>
 		
 		<div id="container">
 			<form>
@@ -66,7 +66,7 @@
 					<label for="title">Title</label> <input type="text" name="title" value="" id="title" size="60">
 				</div>
 				<div>
-					<label for="slug">Slug</label> <input type="text" name="slug" value="" class="slug" size="60">
+					<label for="slug_input">Slug</label> <input type="text" name="slug" id="slug_input" value="" class="slug" size="60">
 				</div>
 				<p>
 					Your URL is http://geocities.com/awesometown/<span class="slug"></span>.
@@ -109,10 +109,9 @@ $('#pig_latin').slugify('#title', {
 		      You can download this project in either
 		      <a href="http://github.com/pmcelhaney/jQuery-Slugify-Plugin/zipball/master">zip</a> or
 		      <a href="http://github.com/pmcelhaney/jQuery-Slugify-Plugin/tarball/master">tar</a> formats.
-		    You can also clone the project with <a href="http://git-scm.com">Git</a>
+		    	You can also clone the project with <a href="http://git-scm.com">Git</a>
 		      by running:
 		      <pre>$ git clone git://github.com/pmcelhaney/jQuery-Slugify-Plugin</pre>
-		    </p>
 		</div>
 	</body>
 </html>
