--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<p>
 				 The plugin takes one option, <var>slugFunc</var>, a callback function
          that lets you customize how slugs are created. <var>slugFunc()</var>
-         takes two arguments. The first is the value ofthe input field to be
+         takes two arguments. The first is a selector for the input field to be
          translated to a slug. The second, optional argument is the original
          slugFunc(), which you can use as a base.
 				</p>
